--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,8 +10,8 @@
                 truly out of this world experience!
             </p>
         </section>
-        <section class="content-button">
+        <a routerLink="/destination/1" class="content-button">
             <h4>EXPLORE</h4>
-        </section>
+        </a>
     </section>
 </body>
