--- a/src/app/crew/crew.component.css
+++ b/src/app/crew/crew.component.css
@@ -31,9 +31,17 @@ body {
     width: 40%;
 }
 
+.crew-body-content-text-wrapper {
+    position: fixed;
+    top: 40%;
+    width: 33%;
+}
+
 .crew-img {
     width: 40%;
-    margin-top: -7em;
+    position: fixed;
+    bottom: 0;
+    right: 4em;
 }
 
 h3 {
@@ -49,6 +57,8 @@ h4 {
 .crew-body-content-nav {
     display: flex;
     flex-direction: row;
+    position: fixed;
+    bottom: 10%;
 }
 
 .crew-nav-link .nav-link-icon {
