Finished nav css for crew page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,10 +14,10 @@
                     <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/destination/1">
                         <strong>01</strong>&nbsp;&nbsp;DESTINATION
                     </a>
-                    <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/crew">
+                    <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/crew/1">
                         <strong>02</strong>&nbsp;&nbsp;CREW
                     </a>
-                    <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/technology">
+                    <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/technology/1">
                         <strong>03</strong>&nbsp;&nbsp;TECHNOLOGY
                     </a>
                 </div> 
@@ -31,13 +31,13 @@
         <a class="nav-link" routerLinkActive="active current" routerLink="/" [routerLinkActiveOptions]="{ exact: true }">
             <strong>00</strong>&nbsp;&nbsp;HOME
         </a>
-        <a class="nav-link" routerLinkActive="active current" routerLink="/destination">
+        <a class="nav-link" routerLinkActive="active current" routerLink="/destination/1">
             <strong>01</strong>&nbsp;&nbsp;DESTINATION
         </a>
-        <a class="nav-link" routerLinkActive="active current" routerLink="/crew">
+        <a class="nav-link" routerLinkActive="active current" routerLink="/crew/1">
             <strong>02</strong>&nbsp;&nbsp;CREW
         </a>
-        <a class="nav-link" routerLinkActive="active current" routerLink="/technology">
+        <a class="nav-link" routerLinkActive="active current" routerLink="/technology/1">
             <strong>03</strong>&nbsp;&nbsp;TECHNOLOGY
         </a>
     </span>
