--- a/src/app/crew/crew.component.css
+++ b/src/app/crew/crew.component.css
@@ -61,16 +61,16 @@ h4 {
     bottom: 10%;
 }
 
-.crew-nav-link .nav-link-icon {
-    background-color: var(--clr-gray);
+.nav-link-icon {
+    background-color: rgba(255,255,255, 0.17);
     width: 1em;
     height: 1em;
     border-radius: 50%;
     margin-right: 1.5em;
 }
 
-.crew-nav-link:hover .nav-link-icon {
-    background-color: var(--clr-gray);
+.nav-link-icon:hover {
+    background-color: rgba(255,255,255, 0.5);
 }
 
 .crew-nav-link.active .nav-link-icon {
