--- a/src/app/technology/technology.component.css
+++ b/src/app/technology/technology.component.css
@@ -69,3 +69,54 @@ body {
     position: absolute;
     right: 0;
 }
+
+/* Tablet */
+@media (max-width:768px) {
+    body {
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("src\assets\technology\background-technology-tablet.jpg");
+        padding: 2em;
+    }  
+
+
+}
+
+/* Mobile */
+@media (max-width:375px) {
+    body {
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("src\assets\technology\background-technology-mobile.jpg");
+        text-align: center;
+    } 
+
+    .technology-body {
+        justify-content: center;
+    }
+
+    .technology-body-title {
+        padding: 1.5em 0 0 0;
+    }
+
+    .technology-nav {
+        flex-direction: row;
+        position: fixed;
+        bottom: 48%;
+        justify-content: space-between;
+        width: 50%;
+    }
+
+    .technology-img {
+        position: fixed;
+        bottom: 63%;
+    }
+
+    .technology-body-text {
+        width: 90%;
+        position: fixed;
+        bottom: 20%;
+        margin: 0;
+    }
+
+    .technology-nav-link {
+        width: 3rem;
+        height: 3rem;
+    }
+}
