--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,16 +9,16 @@
             <div class="nav-links">
                 <div class="link-container">
                     <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/" [routerLinkActiveOptions]="{ exact: true }">
-                        <strong>00</strong>&nbsp;&nbsp;HOME
+                        <strong class="nav-link-text-bold">00</strong>&nbsp;&nbsp;HOME
                     </a>
                     <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/destination/1">
-                        <strong>01</strong>&nbsp;&nbsp;DESTINATION
+                        <strong class="nav-link-text-bold">01</strong>&nbsp;&nbsp;DESTINATION
                     </a>
                     <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/crew/1">
-                        <strong>02</strong>&nbsp;&nbsp;CREW
+                        <strong class="nav-link-text-bold">02</strong>&nbsp;&nbsp;CREW
                     </a>
                     <a class="nav-link" (click)="toggleNavMenu()" routerLinkActive="active current" routerLink="/technology/1">
-                        <strong>03</strong>&nbsp;&nbsp;TECHNOLOGY
+                        <strong class="nav-link-text-bold">03</strong>&nbsp;&nbsp;TECHNOLOGY
                     </a>
                 </div> 
             </div>      
